--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -7,14 +7,29 @@ h1{
   font-weight: bold;
   color: white;
 }
-div.home{
+h2{
+  color: black;
+  font-size: 32px;
+  font-weight: bold;
+}
+h3{
+  color: black;
+  font-size: 23px;
+}
+div.header{
   background-image: url(../images/the-flatiron-building.png);
+  color: white;
 }
 ul {
   list-style-type: none;
+  padding: 0;
+  margin: 0;
 }
 
 a{
   color: white;
   font-size: 18px;
+}
+p{
+  color: black;
 }
